2007-07-06  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/ExtensionTree.cs: If a node has no children, there is no
	  need to recursively call LoadExtensionElement.
	* Mono.Addins/TreeNode.cs, Mono.Addins/ExtensionContext.cs: When
	  activating an add-in, don't add nodes in extensions that have not
	  yet been loaded.
	* Mono.Addins/AddinManager.cs: GetEntryAssembly returns null when
	  running in NUnit.

2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs, Mono.Addins.mdp, Makefile.am: Sign the assembly.

2007-07-03  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinInfo.cs, Mono.Addins/Addin.cs,
	  Mono.Addins.Description/AddinDescription.cs,
	  Mono.Addins.Database/DatabaseConfiguration.cs,
	  Mono.Addins.Database/AddinDatabase.cs: Added support for add-ins
	  which are disabled by default.
	* Mono.Addins.Database/AddinScanner.cs: Minor fix.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/GettextCatalog.cs: Removed old copyright notice, since
	  the file doesn't contain any code from the original class.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinScanner.cs: Don't scan assemblies which
	  are included by .addin files, since they will be already scanned
	  when processing the .addin file.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins/AddinRegistry.cs, Mono.Addins.Database/SetupProcess.cs,
	  Mono.Addins.Database/AddinScanResult.cs,
	  Mono.Addins.Database/AddinDatabase.cs,
	  Mono.Addins.Database/ProcessProgressStatus.cs,
	  Mono.Addins.Database/AddinScanner.cs: Before scanning a file, log
	  the file name. If for some reason the scanner process crashes, the
	  main process will know the name of the file that made it crash and
	  will restart the scan adding it to the ignore file list.

2007-07-02  Lluis Sanchez Gual <lluis@novell.com> 

	* Mono.Addins.mdp, Makefile.am: Added new file.