@@ -1,3 +1,9 @@
+2007-07-25  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* Mono.Addins/RuntimeAddin.cs: New GetResoruce overload.
+	* Mono.Addins/ExtensionNode.cs: Added property for getting the parent
+	  of a node. Some more protection against exceptions.
+
 2007-07-06  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* Mono.Addins/ExtensionTree.cs: If a node has no children, there is no
